; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_vnops.c_vn_open_modflags.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_vnops.c_vn_open_modflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nameidata = type { i32 }
%struct.vnode_attr = type { i32 }

@va_mode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vn_open_modflags(%struct.nameidata* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.nameidata*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vnode_attr, align 4
  store %struct.nameidata* %0, %struct.nameidata** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32 @VATTR_INIT(%struct.vnode_attr* %7)
  %9 = load i32, i32* @va_mode, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @VATTR_SET(%struct.vnode_attr* %7, i32 %9, i32 %10)
  %12 = load %struct.nameidata*, %struct.nameidata** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @vn_open_auth(%struct.nameidata* %12, i32* %13, %struct.vnode_attr* %7)
  ret i32 %14
}

declare dso_local i32 @VATTR_INIT(%struct.vnode_attr*) #1

declare dso_local i32 @VATTR_SET(%struct.vnode_attr*, i32, i32) #1

declare dso_local i32 @vn_open_auth(%struct.nameidata*, i32*, %struct.vnode_attr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
